--- a/app/src/main/res/layout/fragment_fifth.xml
+++ b/app/src/main/res/layout/fragment_fifth.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFEB3B"
+    android:background="#35E80D"
     tools:context=".FirstFragment">
 
 
     <TextView
-        android:id="@+id/value_third"
+        android:id="@+id/value_fifth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,10 +21,10 @@
         android:text="0" />
 
     <Button
-        android:id="@+id/plus_third"
+        android:id="@+id/plus_fifth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/value_third"
+        app:layout_constraintTop_toBottomOf="@id/value_fifth"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
